--- a/client/my-sites/stats/activity-log-item/style.scss
+++ b/client/my-sites/stats/activity-log-item/style.scss
@@ -35,6 +35,10 @@
     .foldable-card.is-expanded .foldable-card__expand .gridicon {
     	transform: rotate(180deg);
     }
+
+    .foldable-card__main {
+    	flex: 5 1;
+    }
 }
 
 .activity-log-item__type {
@@ -102,8 +106,12 @@
 
 .activity-log-item__actor {
 	display: flex;
-	flex-basis: 25%;
+	flex: 2 1;
 	align-items: center;
+
+	@include breakpoint( ">1040px" ) {
+		flex: 1 1;
+	}
 }
 
 .activity-log-item__actor .gravatar {
@@ -111,24 +119,20 @@
 	margin-right: 16px;
 }
 
-.activity-log-item__actor-name {
-}
-
-.activity-item__actor-role {
+.activity-log-item__actor-role {
 	text-transform: uppercase;
 	font-size: 12px;
 	color: $gray;
 }
 
 .activity-log-item__content {
-	flex-grow: 1;
-	flex-shrink: 0;
-	flex-basis: 200px;
+	flex: 3 1;
 }
 
 .activity-log-item__content-title {
 	font-size: 14px;
 }
+
 .activity-log-item__content-sub-title {
 	font-size: 12px;
 	text-transform: uppercase;
